cache_face_landmarks: Added support for multiple scales sequence_face_landmarks: Preparation for face tracker

--- a/sequence_face_landmarks/CMakeLists.txt
+++ b/sequence_face_landmarks/CMakeLists.txt
@@ -1,6 +1,6 @@
 # Source
-set(SFL_SRC sequence_face_landmarks.cpp)
-set(SFL_INCLUDE sfl/sequence_face_landmarks.h)
+set(SFL_SRC sequence_face_landmarks.cpp face_tracker.cpp)
+set(SFL_INCLUDE sfl/sequence_face_landmarks.h sfl/face_tracker.h)
 if(WITH_PROTOBUF)
 	set(PROTO_FILES sequence_face_landmarks.proto)
 	protobuf_generate_cpp(PROTO_SRCS PROTO_HDRS ${PROTO_FILES})
